--- a/re-eh-questions.html
+++ b/re-eh-questions.html
@@ -161,10 +161,10 @@
         <header>
             <div class="header-title">
                 <h1>Renewable Energy & Harvesting</h1>
-                <p>GE-3 Course Material & Notes</p>
+       
             </div>
             <div class="header-controls">
-                <a href="sem3.html" class="back-button"><i data-feather="arrow-left"></i> Back</a>
+                <a href="re-eh.html" class="back-button"><i data-feather="arrow-left"></i> Back</a>
                 <div class="theme-switcher">
                     <input type="checkbox" id="theme-toggle" checked>
                     <label for="theme-toggle" class="slider"></label>
