--- a/re-eh-questions.html
+++ b/re-eh-questions.html
@@ -182,7 +182,7 @@
                         <h2>Unit 1: Fossil Fuels & Nuclear Energy</h2>
                     </div>
                     <p>Covers fossil fuel origins, processing, nuclear fission & fusion, and the need for renewable alternatives.</p>
-                    <a href="re-eh-unit1.html" class="view-notes-link">
+                    <a href="re-eh-Qunit1.html" class="view-notes-link">
                         <span>View Notes</span><i data-feather="arrow-right"></i>
                     </a>
                 </div>
@@ -194,7 +194,7 @@
                         <h2>Unit 2: Solar Energy & Photovoltaics</h2>
                     </div>
                     <p>Explores solar radiation, energy storage, solar ponds, and various applications like solar cells and PV systems.</p>
-                    <a href="re-eh-unit2.html" class="view-notes-link">
+                    <a href="re-eh-Qunit2.html" class="view-notes-link">
                         <span>View Notes</span><i data-feather="arrow-right"></i>
                     </a>
                 </div>
@@ -206,7 +206,7 @@
                         <h2>Unit 3: Piezoelectric Energy Harvesting</h2>
                     </div>
                     <p>Fundamentals of the piezoelectric effect, materials, and applications in generating power from mechanical stress and vibrations.</p>
-                    <a href="re-eh-unit3.html" class="view-notes-link">
+                    <a href="re-eh-Qunit3.html" class="view-notes-link">
                         <span>View Notes</span><i data-feather="arrow-right"></i>
                     </a>
                 </div>
@@ -218,7 +218,7 @@
                         <h2>Unit 4: Electromagnetic Energy Harvesting</h2>
                     </div>
                     <p>Principles of electromagnetic induction and its use in harvesting energy from motion, vibrations, and other ambient sources.</p>
-                    <a href="re-eh-unit4.html" class="view-notes-link">
+                    <a href="re-eh-Qunit4.html" class="view-notes-link">
                         <span>View Notes</span><i data-feather="arrow-right"></i>
                     </a>
                 </div>
