--- a/sem2.html
+++ b/sem2.html
@@ -94,7 +94,7 @@
 
     <main class="container">
         
-        <a href="index.html" class="back-button"><i class="fas fa-arrow-left"></i> Back to Home</a>
+        <a href="semester.html" class="back-button"><i class="fas fa-arrow-left"></i> Back to Home</a>
         
         <div class="subject-grid">
             <a href="major3.html" class="subject-box">
