--- a/re-eh-questions.html
+++ b/re-eh-questions.html
@@ -203,13 +203,24 @@
                 <div class="unit-card">
                     <div class="card-header">
                         <span class="card-icon icon-unit3"><i class="fa-solid fa-wave-square"></i></span>
-                        <h2>Unit 3: Piezoelectric Energy Harvesting</h2>
+                        <h2>Unit 3(a): Piezoelectric Energy Harvesting</h2>
                     </div>
                     <p>Fundamentals of the piezoelectric effect, materials, and applications in generating power from mechanical stress and vibrations.</p>
-                    <a href="re-eh-Qunit3.html" class="view-notes-link">
+                    <a href="re-eh-Qunit3a.html" class="view-notes-link">
                         <span>View Notes</span><i data-feather="arrow-right"></i>
                     </a>
                 </div>
+
+               <div class="unit-card">
+    <div class="card-header">
+        <span class="card-icon icon-unit3"><i class="fa-solid fa-wave-square"></i></span>
+        <h2>Unit 3(b): Wind Energy Harvesting</h2>
+    </div>
+    <p>Principles of wind energy, design of wind turbines, and conversion of kinetic wind motion into usable electrical energy using modern technologies.</p>
+    <a href="re-eh-Qunit3b.html" class="view-notes-link">
+        <span>View Notes</span><i data-feather="arrow-right"></i>
+    </a>
+</div>
 
                 <!-- Unit 4 -->
                 <div class="unit-card">
