--- a/sample.html
+++ b/sample.html
@@ -118,7 +118,7 @@
         <h1>Student App Finder</h1>
         <div class="input-group">
             <label for="studentNameInput">Enter Your Full Name:</label>
-            <input type="text" id="studentNameInput" placeholder="e.g. AUROLAL MANDAL">
+            <input type="text" id="studentNameInput" placeholder="e.g. *********** ********">
         </div>
         <button id="searchButton">Find My App</button>
 
