--- a/major4.sem2.html
+++ b/major4.sem2.html
@@ -262,7 +262,7 @@
     </div>
 
     <footer>
-        <p>© 2024 BSc. Physics Resources. All Rights Reserved. | A Comprehensive Practice Resource for Students.</p>
+        <p>© 2025 Pratyush Swain | All Rights Reserved.</p>
     </footer>
     
     <script>
