--- a/presem-questions.html
+++ b/presem-questions.html
@@ -126,7 +126,7 @@
     
     <canvas id="canvas-background"></canvas>
 
-    <h1 class="main-title">Pre-Semester Question Bank</h1>
+    <h1 class="main-title">Semester Question Bank</h1>
     
     <main id="modules-container"></main>
 
