--- a/semester.html
+++ b/semester.html
@@ -243,7 +243,7 @@
             <div class="semester-grid">
                 <div class="semester-card disabled-card"><div class="card-header"><h2>Semester 1</h2><div class="card-icon"><i data-feather="lock"></i></div></div><div class="launch-soon-badge">Available Soon</div></div>
                 <a href="sem2.html" class="semester-card"><div class="card-header"><h2>Semester 2</h2><div class="card-icon"><i data-feather="book-open"></i></div></div><p>Click to view notes</p></a>
-                <div class="semester-card disabled-card"><div class="card-header"><h2>Semester 3</h2><div class="card-icon"><i data-feather="lock"></i></div></div><div class="launch-soon-badge">Available Soon</div></div>
+                <a href="sem3.html" class="semester-card"><div class="card-header"><h2>Semester 3</h2><div class="card-icon"><i data-feather="book-open"></i></div></div><p>Click to view notes</p></a>
                 <div class="semester-card disabled-card"><div class="card-header"><h2>Semester 4</h2><div class="card-icon"><i data-feather="lock"></i></div></div><div class="launch-soon-badge">Available Soon</div></div>
                 <div class="semester-card disabled-card"><div class="card-header"><h2>Semester 5</h2><div class="card-icon"><i data-feather="lock"></i></div></div><div class="launch-soon-badge">Available Soon</div></div>
                 <div class="semester-card disabled-card"><div class="card-header"><h2>Semester 6</h2><div class="card-icon"><i data-feather="lock"></i></div></div><div class="launch-soon-badge">Available Soon</div></div>
