--- a/semester.html
+++ b/semester.html
@@ -178,7 +178,7 @@
                             <h2>Semester 3</h2>
                             <div class="card-icon"><i data-feather="clock"></i></div>
                         </div>
-                        <p>The next chapter is being prepared and will be available soon.</p>
+                        <p> Semester 3 chapters uploading soon !!!</p>
                     </div>
                     <div class="status-runner-container">
                         <div class="status-runner-track">
