--- a/sem3.html
+++ b/sem3.html
@@ -192,6 +192,21 @@
                          <div class="minor-subject-header"><i class="fas fa-laptop-code"></i><span>Computer Science</span></div>
                         <div class="minor-subject-actions"><a href="syllabus/minor-cs.pdf" target="_blank" class="btn btn-syllabus"><i class="fas fa-file-alt"></i> Syllabus</a><a href="minor-cs.html" class="btn btn-explore">Explore <i class="fas fa-arrow-right"></i></a></div>
                     </div>
+                    <!-- Physics Option -->
+<div class="minor-subject-option">
+    <div class="minor-subject-header">
+        <i class="fas fa-atom"></i><span>Physics</span>
+    </div>
+    <div class="minor-subject-actions">
+        <a href="syllabus/minor-physics.pdf" target="_blank" class="btn btn-syllabus">
+            <i class="fas fa-file-alt"></i> Syllabus
+        </a>
+        <a href="minor-physics.html" class="btn btn-explore">
+            Explore <i class="fas fa-arrow-right"></i>
+        </a>
+    </div>
+</div>
+
                 </div>
             </div>
 
