--- a/sem3.html
+++ b/sem3.html
@@ -212,16 +212,16 @@
 
             <!-- MDC Card -->
             <div class="course-card">
-                 <div class="card-header"><div class="card-icon"><i class="fas fa-leaf"></i></div><div class="card-title-group"><h2 class="card-title">MDC: Environmental Ed.</h2><span class="card-category">Multi-Disciplinary Course</span></div></div>
+                 <div class="card-header"><div class="card-icon"><i class="fas fa-leaf"></i></div><div class="card-title-group"><h2 class="card-title">SEC: Environmental Ed.</h2><span class="card-category">Multi-Disciplinary Course</span></div></div>
                 <p class="card-description">A foundational course on environmental science and sustainability practices.</p>
-                <div class="card-footer"><a href="syllabus/mdc-env.pdf" target="_blank" class="btn btn-syllabus"><i class="fas fa-file-alt"></i> Syllabus</a><a href="mdc-env.html" class="btn btn-explore">Explore Course <i class="fas fa-arrow-right"></i></a></div>
+                <div class="card-footer"><a href="syllabus/sec-env.pdf" target="_blank" class="btn btn-syllabus"><i class="fas fa-file-alt"></i> Syllabus</a><a href="mdc-env.html" class="btn btn-explore">Explore Course <i class="fas fa-arrow-right"></i></a></div>
             </div>
 
             <!-- AEC Card -->
             <div class="course-card">
-                 <div class="card-header"><div class="card-icon"><i class="fas fa-gavel"></i></div><div class="card-title-group"><h2 class="card-title">AEC: Ethics</h2><span class="card-category">Ability Enhancement Course</span></div></div>
+                 <div class="card-header"><div class="card-icon"><i class="fas fa-gavel"></i></div><div class="card-title-group"><h2 class="card-title">MDC: Ethics</h2><span class="card-category">Ability Enhancement Course</span></div></div>
                 <p class="card-description">An introduction to ethical principles and values in personal and professional life.</p>
-                <div class="card-footer"><a href="syllabus/aec-ethics.pdf" target="_blank" class="btn btn-syllabus"><i class="fas fa-file-alt"></i> Syllabus</a><a href="aec-ethics.html" class="btn btn-explore">Explore Course <i class="fas fa-arrow-right"></i></a></div>
+                <div class="card-footer"><a href="syllabus/mdc-ethics.pdf" target="_blank" class="btn btn-syllabus"><i class="fas fa-file-alt"></i> Syllabus</a><a href="aec-ethics.html" class="btn btn-explore">Explore Course <i class="fas fa-arrow-right"></i></a></div>
             </div>
 
         </div>
