--- a/major-5.html
+++ b/major-5.html
@@ -74,7 +74,7 @@
         .btn-view-notes { background-color: var(--primary-accent); color: white; border: none; border-radius: 8px; padding: 0.8rem 1.5rem; font-size: 1em; font-weight: 500; cursor: pointer; display: inline-flex; align-items: center; gap: 0.75rem; transition: all 0.2s ease; }
         .btn-view-notes:hover { background-color: var(--primary-accent-hover); transform: translateY(-2px); box-shadow: 0 4px 15px var(--shadow-color); }
 
-        /* --- NOTES VIEWER STYLES (ADVANCED) --- */
+        /* --- NOTES VIEWER STYLES (ADVANCED & SMALLER BUTTONS) --- */
         .notes-viewer {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.9); z-index: 3000;
@@ -113,23 +113,23 @@
 
         .notes-controls {
             position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
-            background: rgba(0, 0, 0, 0.6); color: white; border-radius: 25px; padding: 0.5rem;
-            display: flex; align-items: center; gap: 0.5rem;
+            background: rgba(0, 0, 0, 0.6); color: white; border-radius: 25px; padding: 0.4rem;
+            display: flex; align-items: center; gap: 0.4rem;
             backdrop-filter: blur(5px); user-select: none; transition: opacity 0.3s ease;
         }
-        .control-btn { background: none; border: none; color: white; font-size: 1.1rem; cursor: pointer; padding: 0.5rem 0.8rem; transition: background-color 0.2s, transform 0.2s; border-radius: 20px; }
+        .control-btn { background: none; border: none; color: white; font-size: 1rem; cursor: pointer; padding: 0.4rem 0.7rem; transition: background-color 0.2s, transform 0.2s; border-radius: 20px; }
         .control-btn:hover { background-color: rgba(255, 255, 255, 0.1); transform: scale(1.05); }
         .control-btn:disabled { opacity: 0.4; cursor: not-allowed; background-color: transparent; transform: none; }
-        .control-group { display: flex; align-items: center; border-left: 1px solid rgba(255,255,255,0.2); padding-left: 0.5rem; margin-left: 0.5rem; }
+        .control-group { display: flex; align-items: center; border-left: 1px solid rgba(255,255,255,0.2); padding-left: 0.4rem; margin-left: 0.4rem; }
         
-        .page-indicator-container { position: relative; padding: 0.5rem 0.8rem; cursor: pointer; border-radius: 20px; transition: background-color 0.2s; }
+        .page-indicator-container { position: relative; padding: 0.4rem 0.7rem; cursor: pointer; border-radius: 20px; transition: background-color 0.2s; }
         .page-indicator-container:hover { background-color: rgba(255, 255, 255, 0.1); }
-        #page-indicator-text { font-weight: 500; font-size: 0.9em; min-width: 80px; text-align: center; }
+        #page-indicator-text { font-weight: 500; font-size: 0.85em; min-width: 70px; text-align: center; }
         #page-input {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.8); color: white; border: 1px solid var(--primary-accent);
             border-radius: 20px; text-align: center; font-family: 'Poppins', sans-serif;
-            font-size: 0.9em; display: none; box-sizing: border-box;
+            font-size: 0.85em; display: none; box-sizing: border-box;
         }
         #page-input::-webkit-outer-spin-button, #page-input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
         #page-input[type=number] { -moz-appearance: textfield; }
@@ -205,12 +205,11 @@
                         <button class="btn-view-notes" data-unit="1"><i class="fas fa-book-open"></i> View Unit I Notes</button>
                         <div class="notes-image-list" style="display:none;">
                             <img src="notes/unit1/page1.jpg" alt="Unit 1, Page 1">
-<img src="notes/unit1/page2.jpg" alt="Unit 1, Page 2">
-<img src="notes/unit1/page3.jpg" alt="Unit 1, Page 3">
-<img src="notes/unit1/page4.jpg" alt="Unit 1, Page 4">
-<img src="notes/unit1/page5.jpg" alt="Unit 1, Page 5">
-<img src="notes/unit1/page6.jpg" alt="Unit 1, Page 6">
-
+                            <img src="notes/unit1/page2.jpg" alt="Unit 1, Page 2">
+                            <img src="notes/unit1/page3.jpg" alt="Unit 1, Page 3">
+                            <img src="notes/unit1/page4.jpg" alt="Unit 1, Page 4">
+                            <img src="notes/unit1/page5.jpg" alt="Unit 1, Page 5">
+                            <img src="notes/unit1/page6.jpg" alt="Unit 1, Page 6">
                         </div>
                     </div>
                     <div id="tab-1-3" class="tab-pane">
