--- a/major-5.html
+++ b/major-5.html
@@ -169,7 +169,7 @@
     </header>
 
     <main class="container">
-        <a href="#" class="back-button"><i class="fas fa-arrow-left"></i> Back to All Subjects</a>
+        <a href="sem3.html" class="back-button"><i class="fas fa-arrow-left"></i> Back to All Subjects</a>
         
         <div class="course-header">
             <h1>Waves and Optics</h1>
