--- a/major-5.html
+++ b/major-5.html
@@ -214,6 +214,11 @@
 <img src="notes/unit1/page4.jpg" alt="Unit 1, Page 4">
 <img src="notes/unit1/page5.jpg" alt="Unit 1, Page 5">
 <img src="notes/unit1/page6.jpg" alt="Unit 1, Page 6">
+<img src="notes/unit1/page7.jpg" alt="Unit 1, Page 7">
+<img src="notes/unit1/page8.jpg" alt="Unit 1, Page 8">
+<img src="notes/unit1/page9.jpg" alt="Unit 1, Page 9">
+<img src="notes/unit1/page10.jpg" alt="Unit 1, Page 10">
+
                         </div>
                     </div>
                     <div id="tab-1-3" class="tab-pane">
